        [BUGFIX] CPAN-RT#21333: Makefile.PL now creates a typemap for Perl 5.6.1
        [BUGFIX] CPAN-RT#21516: disconnect_log() now correctly calls closelog_xs().
        [BUGFIX] CPAN-RT#21866: Silence warnings in openlog().
        [BUGFIX] CPAN-RT#25488: Silence warnings in disconnect_log().
        via syslog().
        [FEATURE] Added Win32 event log support thanks to Yves Orton.
        [TESTS] t/syslog.t now generates a more detailled TAP output.
        [TESTS] Merged change blead@29176: suppress taint mode from t/constants.t
        [TESTS] Added regression tests for CPAN-RT#21866 and #25488.
        [EG] Added example script eg/syslog.pl

0.18 -- 2006.08.28 -- Sebastien Aperghis-Tramoni (SAPER)
        [BUGFIX] Rewrote the way the default identifiant is constructed.
        [TESTS] CPAN-RT#20946: Removed the console mechanism from the main 
        test loop because writing to the console hangs on several systems.
        [DOC] Added a note discouraging the use of setlogsock().

0.17 -- 2006.07.23 -- Sebastien Aperghis-Tramoni (SAPER)
        [BUGFIX] CPAN-RT#20622, #20164: Fixed path handling in connect_unix().
        [CODE] Renamed some variables ($that is not a valid name), and removed 
        some dead code. 
        [CODE] Actually added the macros from Mac OS X that were announced in 
        the 0.14 version.
        [DOC] CPAN-RT#20545: Rewrote the documentation about setlogsock().

0.16 -- 2006.06.20 -- Sebastien Aperghis-Tramoni (SAPER)
        [BUGFIX] Perl-RT#20557: Save errno before trying to connect.
        [FEATURE] Perl-RT#35406: Applied the patch proposed by Keisuke Hirata 
        for a more lax handling of "stream" or "unix" path.
        [FEATURE] Now try the "native" mechanism first.
        [TESTS] Silence warnings generated by t/syslog.t in Perl 5.8.8 and 
        later.
        [DOC] Added documentation about the "native" mechanism.
        [DOC] Now indicates whether tickets are from CPAN or Perl RT.
