@@ -10,6 +10,8 @@ Revision history for Sys-Syslog
         [BUGFIX] CPAN-RT#25488: Silence warnings in disconnect_log().
         via syslog().
         [FEATURE] Added Win32 event log support thanks to Yves Orton.
+        [CODE] Merged changes from Jerry D. Hedden to use ppport.h only when not
+        built from core distribution (blead@30657).
         [TESTS] t/syslog.t now generates a more detailled TAP output.
         [TESTS] Merged change blead@29176: suppress taint mode from t/constants.t
         [TESTS] Added regression tests for CPAN-RT#21866 and #25488.
